use cases Get Sheet and Get Sheet Summary integrated with PG
