# src/modules/crypto/useCases/getSheet/getSheetController.ts
@@ -7,15 +7,15 @@ class GetSheetController {
     async handle(req: Request, res: Response): Promise<Response> {
         //const { user } = req.headers; // headers parameters are considerated as possibles arrays????
         //cont { user } = req; // with middleware. Only this is not working. User not part of req's type
-        const { sheetName } = req.params;
+        const { sheetName, assetName } = req.params;
         const { username } = req.headers;
         const userName = username as string; // username has type string │ string[]
         
-        const response = await this.getSheetUseCase.execute({ sheetName, userName });
+        const response = await this.getSheetUseCase.execute({ sheetName, userName, assetName });
 
         if (response.status === 200) {
-            const sheetNames = JSON.stringify(response.sheet);
-            return res.send(sheetNames);
+            //const assetOperations = JSON.stringify(response.assetOperations);
+            return res.send(response.assetOperations);
         }
         else if (response.status === 404) {
             return res.status(404).json({ error: response.errorMessage});
